[package]
authors = ["Programatik <programatik29@gmail.com>"]
categories = ["asynchronous", "network-programming", "web-programming"]
description = "High level server designed to be used with axum framework."
edition = "2018"
homepage = "https://github.com/programatik29/axum-server"
keywords = ["http", "https", "web", "server"]
license = "MIT"
name = "axum-server"
readme = "README.md"
repository = "https://github.com/programatik29/axum-server"
version = "0.5.1"

[features]
default = []
tls-rustls = ["arc-swap", "pin-project-lite", "rustls", "rustls-pemfile", "tokio/fs", "tokio/time", "tokio-rustls"]
tls-openssl = ["openssl", "tokio-openssl", "pin-project-lite"]
proxy-protocol = ["ppp", "futures"]

[dependencies]
bytes = "1"
futures-util = { version = "0.3", default-features = false, features = ["alloc"] }
http = "0.2"
http-body = "0.4"
hyper = { version = "0.14.26", features = ["http1", "http2", "server", "runtime"] }
tokio = { version = "1", features = ["macros", "net", "sync"] }
tower-service = "0.3"

# optional dependencies
## rustls
arc-swap = { version = "1", optional = true }
pin-project-lite = { version = "0.2", optional = true }
rustls = { version = "0.21", features = ["dangerous_configuration"], optional = true }
rustls-pemfile = { version = "1", optional = true }
tokio-rustls = { version = "0.24", optional = true }

## openssl
openssl = { version = "0.10", optional = true }
tokio-openssl = { version = "0.6", optional = true }

## proxy-protocol
ppp = { version = "2.2.0", optional = true }
futures = { version = "0.3.28", optional = true }

[dev-dependencies]
axum = "0.6"
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.3", features = ["add-extension"] }

[package.metadata.docs.rs]
all-features = true
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]
rustdoc-args = ["--cfg", "docsrs"]

[[example]]
name = "from_std_listener_rustls"
required-features = ["tls-rustls"]
doc-scrape-examples = true

[[example]]
name = "http_and_https"
required-features = ["tls-rustls"]
doc-scrape-examples = true

[[example]]
name = "rustls_reload"
required-features = ["tls-rustls"]
doc-scrape-examples = true

[[example]]
name = "rustls_server"
required-features = ["tls-rustls"]
doc-scrape-examples = true

[[example]]
name = "rustls_session"
required-features = ["tls-rustls"]
doc-scrape-examples = true
