[package]
authors = ["Programatik <programatik29@gmail.com>", "Adi Salimgereev <adisalimgereev@gmail.com>"]
categories = ["asynchronous", "network-programming", "web-programming"]
description = "High level server designed to be used with axum framework."
edition = "2021"
homepage = "https://github.com/programatik29/axum-server"
keywords = ["http", "https", "web", "server"]
license = "MIT"
name = "axum-server"
readme = "README.md"
repository = "https://github.com/programatik29/axum-server"
version = "0.7.1"

[features]
default = []
tls-rustls = ["tls-rustls-no-provider", "rustls/aws-lc-rs"]
tls-rustls-no-provider = ["arc-swap", "rustls", "rustls-pemfile", "tokio/fs", "tokio/time", "tokio-rustls", "rustls-pki-types"]
tls-openssl = ["arc-swap", "openssl", "tokio-openssl"]

[dependencies]
bytes = "1"
futures-util = { version = "0.3", default-features = false, features = [
  "alloc",
] }
http = "1.1"
http-body = "1.0"
hyper = { version = "1.4", features = ["http1", "http2", "server"] }
tokio = { version = "1", features = ["macros", "net", "sync"] }
tower-service = "0.3"
http-body-util = "0.1"
hyper-util = { version = "0.1.2", features = ["server-auto", "tokio"] }
pin-project-lite = "0.2"
tower = { version = "0.4", features = ["util"] }

# optional dependencies
## rustls
arc-swap = { version = "1", optional = true }
rustls = { version = "0.23", default-features = false, optional = true }
rustls-pki-types = { version = "1.7", optional = true }
rustls-pemfile = { version = "2.1", optional = true }
tokio-rustls = { version = "0.26", default-features = false, optional = true }

## openssl
openssl = { version = "0.10", optional = true }
tokio-openssl = { version = "0.6", optional = true }

[dev-dependencies]
serial_test = "3.1"
axum = "0.7"
hyper = { version = "1.4", features = ["full"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["add-extension"] }

[package.metadata.docs.rs]
all-features = true
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]
rustdoc-args = ["--cfg", "docsrs"]

[[example]]
name = "from_std_listener_rustls"
required-features = ["tls-rustls"]
doc-scrape-examples = true

[[example]]
name = "http_and_https"
required-features = ["tls-rustls"]
doc-scrape-examples = true

[[example]]
name = "rustls_reload"
required-features = ["tls-rustls"]
doc-scrape-examples = true

[[example]]
name = "rustls_server"
required-features = ["tls-rustls"]
doc-scrape-examples = true

[[example]]
name = "rustls_session"
required-features = ["tls-rustls"]
doc-scrape-examples = true
